--- a/sample.ipynb
+++ b/sample.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "print(\"simulating...\" )\n",
     "max_time = 30\n",
-    "data, val_data, test_data, train_stat, val_stat, test_stat,surv_func_wrapper, train_full, val_full, test_full= \\\n",
+    "data, val_data, test_data, train_stat, val_stat, test_stat,surv_func_wrapper, train_full, val_full, test_full, _= \\\n",
     "get_data(input_dim= 5 , sampleSize= 1000, max_time=max_time,prediction_itvl = 1, history_itvl=14, overlap=1.0,\n",
     "         seed=1425, std = 0.01)\n",
     "print(\"simulation completed\" )"
